<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

        <huynh.huan.gaugechart.GaugeView
                android:id="@+id/indicator_main"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:gv_backgroundCircleColor="@android:color/transparent"
                app:gv_centerCircleColor="@color/color_indicator"
                app:gv_degreeBetweenMark="6"
                app:gv_endDegree="360"
                app:gv_firstEndColor="@color/first_end_color_indicator"
                app:gv_firstStartColor="@color/first_start_color_indicator"
                app:gv_indicatorColor="@color/color_indicator"
                app:gv_indicatorWidth="3dp"
                app:gv_markColor="@android:color/white"
                app:gv_markWidth="5"
                app:gv_maxPercent="100"
                app:gv_minPercent="0"
                app:gv_secondEndColor="@color/second_end_color_indicator"
                app:gv_secondStartColor="@color/second_start_color_indicator"
                app:gv_speedometerMode="NORMAL"
                app:gv_startDegree="0"
                app:gv_withMark="true" />

        <TextView
                android:id="@+id/tv_start_degree"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/start_degree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indicator_main"
                app:layout_constraintHorizontal_bias="0.5"
                tools:ignore="HardcodedText"/>

        <SeekBar
                android:id="@+id/start_degree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progress="0"
                android:max="450"
                android:min="0"
                app:layout_constraintStart_toEndOf="@+id/tv_start_degree"
                app:layout_constraintTop_toTopOf="@+id/tv_start_degree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="@+id/tv_start_degree"/>

        <TextView
                android:id="@+id/tv_end_degree"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="360"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_start_degree"
                app:layout_constraintHorizontal_bias="0.5"
                tools:ignore="HardcodedText"
                app:layout_constraintStart_toStartOf="parent"/>

        <SeekBar
                android:id="@+id/end_degree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:max="450"
                android:min="0"
                android:progress="360"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_end_degree"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@+id/tv_end_degree"
                app:layout_constraintBottom_toBottomOf="@+id/tv_end_degree"/>

        <TextView
                android:id="@+id/tv_progress"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_end_degree"
                app:layout_constraintHorizontal_bias="0.5"
                tools:ignore="HardcodedText"/>

        <SeekBar
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:max="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_progress"
                app:layout_constraintBottom_toBottomOf="@+id/tv_progress"
                app:layout_constraintStart_toEndOf="@+id/tv_progress"
                app:layout_constraintHorizontal_bias="0.5"/>

        <TextView
                android:id="@+id/tv_gauge_width"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="2"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/gauge_width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percent"
                app:layout_constraintHorizontal_bias="0.5" tools:ignore="HardcodedText"/>

        <SeekBar
                android:id="@+id/gauge_width"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:tooltipText="@string/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="80"
                android:min="5"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/tv_gauge_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_gauge_width"
                app:layout_constraintBottom_toBottomOf="@+id/tv_gauge_width"/>

        <!-- Start Indicator -->
        <CheckBox
                android:id="@+id/cb_indicator"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnIndicatorColor"
                app:layout_constraintTop_toBottomOf="@+id/tv_gauge_width"/>

        <Button
                android:id="@+id/btnIndicatorColor"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/color_indicator"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/cb_indicator"
                app:layout_constraintBottom_toBottomOf="@+id/cb_indicator"
                app:layout_constraintStart_toEndOf="@+id/cb_indicator"
                app:layout_constraintEnd_toStartOf="@+id/tv_indicator_width"/>

        <TextView
                android:id="@+id/tv_indicator_width"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="3"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/indicator_width"
                app:layout_constraintStart_toEndOf="@+id/btnIndicatorColor"
                app:layout_constraintTop_toTopOf="@+id/cb_indicator"
                app:layout_constraintBottom_toBottomOf="@+id/cb_indicator"
                tools:ignore="HardcodedText"/>

        <SeekBar
                android:id="@+id/indicator_width"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:tooltipText="@string/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="30"
                android:progress="3"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_indicator_width"
                app:layout_constraintTop_toTopOf="@+id/cb_indicator"
                app:layout_constraintBottom_toBottomOf="@+id/cb_indicator"/>

        <!-- Start Mark -->
        <CheckBox
                android:id="@+id/cb_mark"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnMarkColor"
                app:layout_constraintTop_toBottomOf="@+id/tv_indicator_width"/>

        <Button
                android:id="@+id/btnMarkColor"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/tv_mark_width"
                app:layout_constraintStart_toEndOf="@+id/cb_mark"
                app:layout_constraintTop_toTopOf="@+id/cb_mark"
                app:layout_constraintBottom_toBottomOf="@+id/cb_mark"/>

        <TextView
                android:id="@+id/tv_mark_width"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="5"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/sb_mark_width"
                app:layout_constraintStart_toEndOf="@+id/btnMarkColor"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@+id/cb_mark"
                app:layout_constraintBottom_toBottomOf="@+id/cb_mark"
                tools:ignore="HardcodedText"/>

        <SeekBar
                android:id="@+id/sb_mark_width"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:max="10"
                android:progress="1"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_mark_width"
                app:layout_constraintTop_toTopOf="@+id/cb_mark"
                app:layout_constraintBottom_toBottomOf="@+id/cb_mark"/>

        <Button
                android:id="@+id/btnFirstStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/firstStart"
                android:background="@color/first_start_color_indicator"
                app:layout_constraintTop_toBottomOf="@+id/cb_mark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btnFirstEnd"/>

        <Button
                android:id="@+id/btnFirstEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/firstEnd"
                android:background="@color/first_end_color_indicator"
                app:layout_constraintTop_toTopOf="@+id/btnFirstStart"
                app:layout_constraintBottom_toBottomOf="@+id/btnFirstStart"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFirstStart"/>

        <Button
                android:id="@+id/btnSecondStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/secondStart"
                android:background="@color/second_start_color_indicator"
                app:layout_constraintTop_toBottomOf="@+id/btnFirstStart"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btnSecondEnd"
                app:layout_constraintHorizontal_bias="0.5"/>

        <Button
                android:id="@+id/btnSecondEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/secondEnd"
                android:background="@color/second_end_color_indicator"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSecondStart"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@+id/btnSecondStart"/>

        <!-- Background -->
        <Button
                android:id="@+id/btnBackgroundColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/backgroundColor"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/btnSecondStart"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>